Alignment in training flex box fixed

--- a/css/dynamic_lightbox.css
+++ b/css/dynamic_lightbox.css
@@ -182,4 +182,9 @@ img.hover-shadow {
   top: 25px;
   right: 25px;
 }
+
+.column {
+  float: none;
+  width: 100%;
+}
 }
